# python-sage-bbb

./: .gitignore  .pre-commit-config-ci.yml  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml  run.py  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
docs/source/: conf.py  index.rst
docs/source/big_blue_button/: conf_tools.rst  index.rst  installation.rst
docs/source/getting_started/: features.rst  index.rst  installation.rst  introduction.rst
docs/source/meetings/: create.rst  end.rst  get.rst  index.rst  info.rst  is_running.rst  join.rst
sage_bbb/: utils.py
sage_bbb/helpers/: __init__.py  meeting.py
sage_bbb/services/: __init__.py  client.py  configurations.py  factory.py  meetings.py  recordings.py
