[metadata]
description-file = README.md
mypy_path = stubs

[isort]
profile=black
skip = build,.tox,venv
skip_glob=**/migrations
group_by_package=true
known_django=django
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
# length_sort_sections=future,stdlib,django,thirdparty
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88